Fix unresponsiveness when scrolling sometimes
Properly detect whether or not the user is doing a horizontal scroll

--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -1,6 +1,6 @@
 body {
     background: #D1E39F;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 main {
